syntax = "proto3";

package fence.v1;

import "buf/validate/validate.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/binarymatt/fence/gen/fence/v1;fencev1";

service FenceService {
  rpc IsAllowed(IsAllowedRequest) returns (IsAllowedResponse) {}
  rpc CreateEntity(CreateEntityRequest) returns (CreateEntityResponse) {}
  rpc DeleteEntity(DeleteEntityRequest) returns (DeleteEntityRequest) {}
  rpc CreatePolicy(CreatePolicyRequest) returns (CreatePolicyResponse) {}
  rpc DeletePolicy(DeletePolicyRequest) returns (DeletePolicyResponse) {}
}

message IsAllowedRequest {
  EntityUID principal = 1 [(buf.validate.field).required = true];
  EntityUID resource = 2 [(buf.validate.field).required = true];
  EntityUID action = 3 [(buf.validate.field).required = true];
}
message EntityUID {
  string type = 1 [(buf.validate.field).required = true];
  string id = 2 [(buf.validate.field).required = true];
}
message Entity {
  EntityUID uid = 1 [(buf.validate.field).required = true];
  repeated EntityUID parents = 2;
  // TODO: attributes and tags
  map<string, google.protobuf.Value> attributes = 3;
  map<string, google.protobuf.Value> tags = 4;
}
message Policy {
  string definition = 1 [(buf.validate.field).required = true];
  string id = 2;
}
message Reason {
  string policy_id = 1;
  string message = 2;
}

message IsAllowedResponse {
  bool decision = 1;
  repeated Reason reason = 2;
}
message CreateEntityRequest {
  Entity entity = 1;
}
message CreateEntityResponse {}

message DeleteEntityRequest {
  EntityUID uid = 1;
}
message DeleteEntityResponse {}

message CreatePolicyRequest {
  Policy policy = 1;
}
message CreatePolicyResponse {}
message DeletePolicyRequest {}
message DeletePolicyResponse {}
